fix for autosave message bug where RTE jumps to top when message appears
git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@9832 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/entry.css
+++ b/htdocs/stc/entry.css
@@ -269,10 +269,8 @@
     text-align: right;
     display: block;
     margin-bottom: 4px;
-}
-#draftstatus span {
-    background-color: #E4EDF6;
-    padding: 2px 6px;
+    width: 100%;
+    background-color: #fff;
 }
 .errorbar {
     margin-bottom: 10px !important;
